unpackaged/main/default/objects/suneel__c/suneel__c.object-meta.xml
<CustomObject>
    <label>suneel</label>
    <nameField>
        <label>suneel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>suneel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>