unpackaged/main/default/objects/suneel__c/fields/sueel6__c.field-meta.xml
<CustomField>
    <fullName>sueel6__c</fullName>
    <label>sueel6</label>
    <type>Email</type>
</CustomField>