unpackaged/main/default/objects/suneel__c/fields/suneel1__c.field-meta.xml
<CustomField>
    <fullName>suneel1__c</fullName>
    <label>suneel1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>