unpackaged/main/default/objects/suneel__c/fields/suneel2__c.field-meta.xml
<CustomField>
    <fullName>suneel2__c</fullName>
    <label>suneel2</label>
    <type>TextArea</type>
</CustomField>