unpackaged/main/default/objects/suneel__c/fields/suneel3__c.field-meta.xml
<CustomField>
    <fullName>suneel3__c</fullName>
    <label>suneel3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>